@@ -1,3 +1,8 @@
+2013-08-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* mm-decode.el (mm-command-output): New face.
+	(mm-display-external): Use it.
+
 2013-08-01  Kan-Ru Chen (陳侃如)  <kanru@kanru.info>  (tiny change)
 
 	* nnmbox.el (nnmbox-request-article): Don't change point.
